[package]
name = "csvRustIteration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
flate2 = "1.0.27"
rayon = "1.8.0"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["full"] }

